# termuxwm

./: .gitignore  .wallpaper.jpg.swp  LICENSE  README.md  jgmenu.desktop  meson.build  start_vnc  start_vnc.sh  sxhkdrc  tint2rc  tint2rc.fixed  tint2rc.safe
src/: main.c
